--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 Debug
 Release
+Project Logs for PCB_Project
+Historys
+__Previews
 .vs
 .vscode
 .idea
 cmake-build-debug
 .step
 .PrjPcbStructure
-Project Logs for PCB_Project
-Historys
